@@ -1,3 +1,6 @@
+11-Mar-2004 by Matthias Braun
+-started work on a serverconsole
+
 8-Mar-2004 by Matthias Braun
 -fixed a bug in colortable saving which I introduced with my last commit
 -added timestamp to serverconsole and cleaned related code a bit
